Bug 1740186 - [MIPS64] Accept ImmWord operand in ma_addPtrTestCarry. r=lth

Differential Revision: https://phabricator.services.mozilla.com/D130728